还未能上传头像

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,8 @@
     package="com.zs.im"
     android:versionCode="100"
     android:versionName="1.0.0">
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
     <!-- Required -->
     <uses-permission android:name="android.permission.VIBRATE" />
     <uses-permission android:name="android.permission.INTERNET" />
@@ -24,12 +26,17 @@
     <application
         android:name=".IMApplication"
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/icon"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
-        <activity android:name=".controller.activity.ChatActivity"></activity>
+        android:theme="@style/Theme.AppCompat.Light.NoActionBar">
+        <activity android:name=".controller.activity.PersonDataActivity"></activity>
+        <activity android:name=".controller.activity.GroupDetailActivity" />
+        <activity android:name=".controller.activity.PickContactActivity" />
+        <activity android:name=".controller.activity.NewGroupActivity" />
+        <activity android:name=".controller.activity.GroupListActivity" />
+        <activity android:name=".controller.activity.ChatActivity" />
         <activity android:name=".controller.activity.InviteActivity" />
         <activity android:name=".controller.activity.AddContactActivity" />
         <activity android:name=".controller.activity.SplashActivity">
